<resources>
    <string name="app_name">My Application</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_0">0</string>
    <string name="_dot">.</string>
    <string name="_plus">+</string>
    <string name="_minus">-</string>
    <string name="_multiplication">*</string>
    <string name="_div">/</string>
    <string name="_res">=</string>
    <string name="material_light">Light Theme</string>
    <string name="material_dark">Dark Theme</string>
    <string name="_select_theme">Select theme:</string>
    <string name="text_apply_theme">Apply</string>
    <string name="text_return">Return</string>
</resources>